-------------------------------------------------------------------------------

2008-03-31  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 4.0.4 release (SVN tag: release-4-0-4)

	* NEWS, VERSION: Add release notes and update version number for
	IT++ 4.0.4

	* win32/itpp_acml_tests/Makefile.am,
	win32/itpp_mkl_tests/Makefile.am: Add converters_test.vcproj to
	EXTRA_DISTS variable of Makefiles

	Without this patch, the project files for converters_test were not
	included in the distribution package.

2008-03-26  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/itfile_test.cpp: Remove setf(ios::scientific) and
	setf(ios::fixed) from itfile_test.cpp

	These two formatting options causes broken output of
	floating-point data when using MSVC++ Express 2008. In spite of
	the fact that this seems to be a bug in MSVC++ Express 2008,
	removal of these formatting options fixes this problem.

2008-03-25  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/itfile_test.cpp, tests/itfile_test_data.it: Improve
	itfile_test by using a non-continuous reference data file

	Such a data file is prepared by first saving a longer data structure
	(ivec in this case), then deleting it and finally saving a shorter
	data structure in the same place.

	* itpp/base/itfile.cpp: Do not duplicate seek operation after
	reading data_header fields

	When reading each field of a data_header structure of an IT++
	file, the reading position is automatically incremented. So, the
	additional seekg() operation afterwards is redundant. This small
	modification fixes a problem with endless loop while reading an
	itfile in programs compiled with MSVC++ 2008. Previous MSVC++
	version (2005) does not show this strange behaviour.

	* tests/Makefile.am, tests/converters_test.cpp,
	tests/converters_test.ref,
	win32/itpp_acml_tests/converters_test.vcproj,
	win32/itpp_acml_tests/itpp_acml_tests.sln,
	win32/itpp_mkl_tests/converters_test.vcproj,